<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- me -->
	<artifactId>wls-project-sdbby</artifactId>
	<version>5.0.9-SNAPSHOT</version>

	<!-- parent -->
	<parent>
		<artifactId>wls-kernel-parent</artifactId>
		<groupId>de.heuboe.wls</groupId>
		<version>4.5.3</version>
	</parent>

	<properties>
  		<wls-add.version>4.0.3</wls-add.version> 
		<cfg-svc-interface.version>1.16.17</cfg-svc-interface.version>
  		<java.version>11</java.version>
        <mainClass>de.heuboe.wls.by.Main</mainClass>
	</properties>

	
	<!-- dependencies -->
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
		</dependency>
		
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
  			<artifactId>log4j-jul</artifactId>
		</dependency>
		
		
		<!--  WLS  -->
		
	    <dependency>
			<groupId>de.heuboe.geo</groupId>
			<artifactId>geo-server</artifactId>
	    </dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-iface</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-lib</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-srv</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-util</artifactId>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-geo-features</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-geo-features-lib</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-lib</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-plugin</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-intrest</artifactId>
			<version>${wls-add.version}</version>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-roadmap-here</artifactId>
			<version>0.1.1</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-openlr-plugin</artifactId>
<!--    			<version>4.5.0</version>  -->
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.10</version>
		</dependency>	
		
		
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <version>29.0-android</version>
		  	<artifactId>guava</artifactId>
		</dependency>
<!--  	
		<dependency>
	  		<groupId>de.heuboe.datex2</groupId>
	  		<artifactId>openlr-datex2-2.3</artifactId>
	  		<version>1.2.2</version>
		</dependency>
-->			
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tcc</artifactId>
			<version>${wls-add.version}</version>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-sdbby</artifactId>
			<version>4.5.0</version>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tmc-plugin</artifactId>
		</dependency>
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-tmc-roadnet-plugin</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.wls</groupId>
			<artifactId>wls-persistence</artifactId>
		</dependency>
		
		<dependency>
			<groupId>de.heuboe.base</groupId>
			<artifactId>jhbCsv</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-transports-http-jetty</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxws</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-tools-common</artifactId>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		

		<dependency>
			<groupId>de.heuboe.asfinag</groupId>
			<artifactId>vmis2-configservice-interface</artifactId>
			<version>${cfg-svc-interface.version}</version>
		</dependency>

		<dependency>
	        <groupId>de.heuboe.asfinag</groupId>
		    <artifactId>vmis2-kafka-protopojo-converter</artifactId>
		    <version>1.5.1</version>
		</dependency>
		
		<!-- Spring -->
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
				
			</exclusions>
		</dependency>
    	<dependency>
        	<groupId>org.springframework.boot</groupId>
        	<artifactId>spring-boot-starter-web</artifactId>
    	</dependency>
		
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
		  	<groupId>net.devh</groupId>
		  	<artifactId>grpc-client-spring-boot-starter</artifactId>
		  	<version>2.10.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
		
	</dependencies>
	<build>
		<plugins>
		
			<plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
			    <configuration>
			        <skip>true</skip>
			    </configuration>
			</plugin>		
			
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<executions>
					<!-- Optional -->
					<!-- Build a tar file to allow local inspection -->
					<execution>
						<id>docker-build-tar</id>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
					<!-- Required -->
					<!-- Upload the image to the registry -->
					<execution>
						<id>docker-build</id>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<from>
						<!-- ${docker.registry} is set via settings.xml 
						<image>${docker.registry}/adoptopenjdk/openjdk11:alpine-jre</image>
						-->
						<image>${docker.registry}/eclipse-temurin:17-jre-alpine</image>
					</from>
					<to>
						<!-- This change is important -->
						<image>${docker.registry}/heuboe/wls/${project.artifactId}:${project.version}</image>
					</to>
					<container>
						<jvmFlags>
							<!-- Flags für Spring -->
							<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
							<jvmFlag>-Dlogging.config=/config/log4j2.xml</jvmFlag>
							<jvmFlag>-Dspring.config.location=file:/config/</jvmFlag>
							<!-- Do not add flags such as -Xmx2G or other parameters here that 
								might be changed later on -->
						</jvmFlags>
						<mainClass>${mainClass}</mainClass>
						<ports>
							<!-- Ports with their function -->
							<port>8080</port><!-- actuator -->
						</ports>
						<labels>
							<version>${project.version}</version>
							<build.timestamp>${maven.build.timestamp}</build.timestamp>
							<!-- Metadata-derived from the git-commit-id-plugin -->
							<git.tags>${git.tags}</git.tags>
							<git.commit.id.abbrev>${git.commit.id.abbrev}</git.commit.id.abbrev>
							<git.commit.timestamp>${git.commit.time}</git.commit.timestamp>
						</labels>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<filesModificationTime>${git.commit.time}</filesModificationTime>
					</container>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>